# rp-audit

./: .gitignore  README.md  pyproject.toml
data/: batch_log.jsonl  experiments.csv  ledger_ranked.csv  targets.csv  targets_ranked.csv  targets_selected.csv  targets_selected_status.csv
data/memory/: 3saf.com.txt  aasavis.no.txt  activated.win.txt  adidas.com.txt  aero.zip.json  aero.zip.txt  afternic.com.json  afternic.com.txt  agoda.com.json  agoda.com.txt  ah.nl.txt  aha.io.txt  ahrefs.com.txt  airasia.com.txt  airnewzealand.com.txt  akersposten.no.txt  alezz-oud.com.txt  aliexpress.com.txt  allianz.com.txt  almalinux.org.txt  alterware.dev.txt  amazonaws.cn.txt  amboss.com.txt  amta.no.txt  api.no.txt  arca.live.json  arca.live.txt  arpari.com.txt  astralium.su.txt  auone.jp.txt  austagderblad.no.txt  avisa-hordaland.no.json  avisagaula.no.json  avisenagder.no.json  axenov.dev.json  bandit.events.json  basewallet.co.json  basicattentiontoken.org.json  battle.net.json  bbn.music.json  (+29 more)
data/preprocessing/: crux_sort.py  portal_probe.py
rp_audit_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: capture_session.py  fetch_code.py  manual_launch.py  manual_signup.py  set_known_endpoint.py
src/: init.py  report.py  requeue.py  set_signup.py  sync_selected_status_notes.py
src/hook/: run.py
src/lib/: autofill.py  browser.py  consent.py  credentials.py  dates.py  detect.py  idb.py  imap_poll.py  ledger.py  parse.py  (+6 more)
tests/: test_consent.py  test_dates.py  test_imap_poll.py  test_outcomes.py  test_sync_selected_status_notes.py  test_webauthn_params.py
